--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,29 @@ readme = "README.md"
 python = "^3.12"
 
 
+[tool.poetry.group.lint.dependencies]
+flake8 = "^7.1.2"
+black = "^25.1.0"
+isort = "^6.0.1"
+mypy = "^1.15.0"
+
+[tool.isort]
+line-length = 119
+
+[tool.black]
+line-length = 119
+exclude = ".git"
+
+[tool.flake8]
+max-line-length = 119
+exclude = ".git,__pycache__"
+
+[tool.mypy]
+disallow_untyped_defs = true
+warn_return_anu = true
+exclude = "venv"
+
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
