--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ black = "^25.1.0"
 isort = "^6.0.1"
 mypy = "^1.15.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest-cov = "^6.0.0"
+
 [tool.isort]
 line-length = 119
 
